Fixed CC logos alignment in footer

--- a/web/css/source/_absolute.less
+++ b/web/css/source/_absolute.less
@@ -517,7 +517,7 @@ a:hover { transition: all @transition-time__m; border-color: @color-white-dark-s
     .footer-payments {
         float: right;
         .widget {
-            margin-bottom: 0;
+            margin: 0;
         }
         li {
             padding-top: 4px;
